feat(user): get users paginated
